--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,36 @@ p {
     line-height: 34px;
     color: aqua;
 }
+@media screen { max-width: 730px;
+    body {
+        width: 180%;
+        height: 50%;
+        padding: 0;
+        margin: 0;
+    }
+    header {
+        display: none;
+    }
+    h1 {
+        font-size: 36px;
+        line-height: 52px;
+        width: auto;
+        margin: 58px 50px 0 50px;
+        text-align: center;
+    }
+    p {
+        margin: 15px 40px;
+        width: auto;
+        text-align: center;
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .button-main {
+        margin: auto;
+        display: block;
+    }
+    .logo-image {
+        position: static;
+        max-width: 90%;
+    }
+}
